--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,21 @@
         "ecmaVersion": "latest"
     },
     "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "error",
+            "unix"
+        ],
+        "quotes": [
+            "error",
+            "single"
+        ],
+        "semi": [
+            "error",
+            "always"
+        ]
     }
 }
